# It-s-circlin-time

./: CMakeLists.txt  a.out  compile_commands.json  readme.md
.cache/clangd/index/: cgltf.h.DC5A91B9A21B5AF4.idx  circle.h.254661EC7F2C00D9.idx  cocoa_init.m.6A524C5060073B77.idx  cocoa_joystick.h.ACCBA080B9739801.idx  cocoa_joystick.m.25A67786F43E0AA5.idx  cocoa_monitor.m.A7345B89F613BF0D.idx  cocoa_platform.h.8C70394CE7ED4885.idx  cocoa_time.c.04FCB0AAF773A7EA.idx  cocoa_time.h.F72A75EDC9A4334C.idx  cocoa_window.m.6B13F6D1583BF6E3.idx  complex.h.4FEC39CBFB8E4799.idx  config.h.455D4D6E1D17B299.idx  context.c.2580D3088B57A1DF.idx  core.h.D1AD38BA06602580.idx  darray.c.DF2B2A9BB6F4DE76.idx  darray.h.29326D7426C8B1A8.idx  dllist.h.28E8F94866A04A7F.idx  dr_mp3.h.0B4ACC10AA806138.idx  dr_wav.h.198E4DF7081E0905.idx  egl_context.c.624F2C4EAE9DB090.idx  glad.h.BEF358683D5B3361.idx  glfw3.h.8124F45C711D4E47.idx  glfw3native.h.436D96899D2D98F1.idx  gui.h.C928572B2F8137AA.idx  init.c.955C0EAC63F240CD.idx  input.c.0ADA45C6CDF41C05.idx  internal.h.4E209651A3E847B7.idx  jar_mod.h.102B8EFF4863B098.idx  jar_xm.h.6C18D51CB8AA2115.idx  m3d.h.054839F26538AE91.idx  main.c.05FF6D1EDDAB85AA.idx  mappings.h.808D08570841795E.idx  miniaudio.h.C08B4817D17D478A.idx  monitor.c.F6D38D7BC0A5F18A.idx  (+51 more)
src/: :w  CMakeLists.txt  circle.c  circle.h  complex.c  complex.h  core.c  core.h  darray.c  darray.h  dllist.c  dllist.h  gui.c  gui.h  main.c  svgloader.c  svgloader.h  utils.c  utils.h
test/: CMakeLists.txt  test.c  test.h  test_complex.c  test_core.c  test_darray.c  test_dllist.c  test_utils.c
